# string-template

./: .gitignore  CompileTemplate.hs  Test.hs  string-template.cabal
Text/: StringTemplate.hs
Text/StringTemplate/: AST.hs  Attribute.hs  ByteCode.hs  Compiler.hs  Group.hs  Interpreter.hs  ParserUtils.hs
tests/: test1.sg  test4.st  test5.st  test7.st
