name:                string-template
version:             0.0.1
synopsis:            StringTemplate implementation in Haskell.
description:         A port of the Java library by Terrence Parr.
category:            Text
license:             GPL
license-file:        LICENSE
author:              Joe Thornber
maintainer:          joe.thornber@gmail.com
Tested-With:         GHC == 6.12.1
Build-Type:          Simple
build-Depends:       base
Cabal-Version:       >= 1.6

library
  build-depends:   base > 4, parsec > 3, containers > 0.3, test-framework, test-framework-hunit,
                   test-framework-quickcheck2, HUnit, mtl, monad-loops

  exposed-modules:   Text.StringTemplate
  other-modules:
  ghc-options:       -Wall
  if impl(ghc >= 6.8)
    ghc-options:     -fwarn-tabs

Executable compile_template
  Main-is: CompileTemplate.hs
  Other-Modules: Text.StringTemplate
  build-depends:   base > 4, parsec > 3, containers > 0.3, mtl, monad-loops

Executable run_tests
  Main-is: Test.hs
  Other-Modules: Text.StringTemplate
  build-depends:   base > 4, parsec > 3, containers > 0.3, QuickCheck, test-framework-quickcheck2, HUnit, mtl, monad-loops
 